--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
+    "three": "^0.124.0",
     "web-vitals": "^0.2.4"
   },
   "main": "main.js",
   "scripts": {
-    "electron" : "electron .",
+    "electron": "electron .",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
